chore: fixed overflow of apply button

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -795,4 +795,10 @@ span {
   margin-top: auto;
   height: 44px;
   width: 280px;
+  overflow: hidden;
+  border-radius: 4px;
+  iframe {
+    position: relative;
+    left: -12px;
+  }
 }
